--- a/app/src/main/res/layout/activity_firstscreen.xml
+++ b/app/src/main/res/layout/activity_firstscreen.xml
@@ -33,7 +33,7 @@
           android:nextFocusDown="@id/password"
           android:textColor="@color/dotInactive"
           app:layout_constraintBottom_toBottomOf="parent"
-          app:layout_constraintStart_toStartOf="@+id/login_button"
+          app:layout_constraintStart_toStartOf="@id/login_button"
           app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
@@ -47,8 +47,8 @@
           android:inputType="textPassword"
           android:textColor="@color/dotInactive"
           app:layout_constraintBottom_toBottomOf="parent"
-          app:layout_constraintStart_toStartOf="@+id/emailId"
-          app:layout_constraintTop_toBottomOf="@+id/emailId" />
+          app:layout_constraintStart_toStartOf="@id/emailId"
+          app:layout_constraintTop_toBottomOf="@id/emailId" />
 
         <Button
           android:id="@+id/login_button"
@@ -109,7 +109,7 @@
           app:layout_constraintBottom_toTopOf="@+id/signup_button"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintTop_toBottomOf="@+id/login_button" />
+          app:layout_constraintTop_toBottomOf="@id/login_button" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
