--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -7,20 +7,23 @@
     <fragment
       android:id="@+id/navigation_cart"
       android:name="org.locer.in.CartFragment"
-      android:label="CartFragment">
-    </fragment>
+      android:label="CartFragment" />
 
     <fragment
       android:id="@+id/navigation_home"
       android:name="org.locer.in.HomeFragment"
       android:label="HomeFragment">
+        <action
+          android:id="@+id/action_navigation_home_to_signUpPage"
+          app:destination="@id/signUpPage"
+          app:popUpTo="@id/navigation_home"
+          app:popUpToInclusive="true" />
     </fragment>
 
     <fragment
       android:id="@+id/navigation_wishlist"
       android:name="org.locer.in.WishlistFragment"
-      android:label="WishlistFragment">
-    </fragment>
+      android:label="WishlistFragment" />
 
     <fragment
       android:id="@+id/navigation_laundry"
@@ -28,5 +31,9 @@
       android:label="LaundryFragment">
 
     </fragment>
+    <fragment
+      android:id="@+id/signUpPage"
+      android:name="org.locer.in.SignUpPage"
+      android:label="SignUpPage" />
 
 </navigation>
